Update and rename 1pengenalan.html to 1_pengenalan.html

--- a/w3school/html/1_pengenalan.html
+++ b/w3school/html/1_pengenalan.html
@@ -1,9 +1,16 @@
 apa itu html
 html atau hypertext mark language 
 adalah salah satu bahasa pengkodean yang banyak dipakai disetiap website
-<!DOCTYPE html> 
+
+<!DOCTYPE html>
 <html>
+<head>
+<title>Page Title</title>
+</head>
+<body>
 
+<h1>My First Heading</h1>
+<p>My first paragraph.</p>
 
-
+</body>
 </html>
