--- a/simplilearn/javascript/array.html
+++ b/simplilearn/javascript/array.html
@@ -1,1 +1,3 @@
-
+//membuat sebuah array
+        let cars = ["bmw", "volvo", "honda"]; //memasukkan array kedalam variable cars
+        document.getElementById("array").innerHTML = cars; //menampilkan array pada variable cars
