--- a/simplilearn/javascript/array.html
+++ b/simplilearn/javascript/array.html
@@ -1,3 +1,6 @@
 //membuat sebuah array
         let cars = ["bmw", "volvo", "honda"]; //memasukkan array kedalam variable cars
         document.getElementById("array").innerHTML = cars; //menampilkan array pada variable cars
+
+        let bmw = cars[0]; // mengambil elemen dari sebuah array dan memasukkannya ke variable bmw
+        document.getElementById("array").innerHTML = bmw;  //menampilkan variable bmw kedalaman element id "array" pada html
