--- a/simplilearn/javascript/array.html
+++ b/simplilearn/javascript/array.html
@@ -7,8 +7,18 @@
         document.getElementById("array").innerHTML = bmw;  //menampilkan variable bmw kedalaman element id "array" pada html
 
 //properti yang menampilkan jumlahnya elemen dalam suatu array
+ //array length property
         let len = cars.length; //menampilkan banyaknya elemen pada sebuah array
         document.getElementById("array").innerHTML = len; 
 
         let last = cars[cars.length - 1]; //menampilkan elemen yang paling akhir dari sebuah array
         document.getElementById("array").innerHTML = last; 
+
+//pengulangan setiap elemen dari sebuah array
+ //Loop Over an array item
+        cars.forEach(//function untuk menampilkan elemen dari sebuah array setiap elemennya
+            (item,index,array) => { //membuat sebuah function
+                console.log(item,index); //menampilkan elemen dari array ke sebuah console log
+            });
+
+
